2.1.0/_sources/gallery/userdemo/pgf_texsystem_sgskip.rst.txt


.. _sphx_glr_gallery_userdemo_pgf_texsystem_sgskip.py:


=============
Pgf Texsystem
=============




.. code-block:: python

    # -*- coding: utf-8 -*-

    import matplotlib as mpl
    mpl.use("pgf")
    pgf_with_pdflatex = {
        "pgf.texsystem": "pdflatex",
        "pgf.preamble": [
             r"\usepackage[utf8x]{inputenc}",
             r"\usepackage[T1]{fontenc}",
             r"\usepackage{cmbright}",
             ]
    }
    mpl.rcParams.update(pgf_with_pdflatex)

    import matplotlib.pyplot as plt
    plt.figure(figsize=(4.5, 2.5))
    plt.plot(range(5))
    plt.text(0.5, 3., "serif", family="serif")
    plt.text(0.5, 2., "monospace", family="monospace")
    plt.text(2.5, 2., "sans-serif", family="sans-serif")
    plt.xlabel(u"µ is not $\\mu$")
    plt.tight_layout(.5)

    plt.savefig("pgf_texsystem.pdf")
    plt.savefig("pgf_texsystem.png")

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: pgf_texsystem_sgskip.py <pgf_texsystem_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: pgf_texsystem_sgskip.ipynb <pgf_texsystem_sgskip.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
